[gd_scene format=4 uid="uid://coar0w52ewb50"]

[ext_resource type="Script" uid="uid://3a4xl42l8pj3" path="res://scripts/world.gd" id="1_k0juu"]
[ext_resource type="PackedScene" uid="uid://cohiqpndtgam" path="res://scenes/enemy.tscn" id="2_71j4m"]
[ext_resource type="PackedScene" uid="uid://be8qbmt0fe144" path="res://scenes/player.tscn" id="3_4wyf3"]
[ext_resource type="Texture2D" uid="uid://ujq7mfchfrd0" path="res://assets/house_spawn_point.png" id="5_71j4m"]
[ext_resource type="Texture2D" uid="uid://blerfcpjtrvye" path="res://assets/tilemap2.png" id="5_i7141"]
[ext_resource type="FontFile" uid="uid://chqxbgi22eiuh" path="res://fonts/Boogaloo-Regular.ttf" id="7_i7141"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_71j4m"]
texture = ExtResource("5_i7141")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_qfnet"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_71j4m")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71j4m"]
size = Vector2(518, 172)

[sub_resource type="Curve2D" id="Curve2D_71j4m"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 3456.6602, -560.84534, 0, 0, 0, 0, -1331.2593, -567.9326, 0, 0, 0, 0, -1353.4115, 850.5362, 0, 0, 0, 0, -1371.5361, 2185.9827, 0, 0, 0, 0, 3443.57, 2197.1199, 0, 0, 0, 0, 3437.5286, -516.29675)
}
point_count = 6

[node name="WORLD" type="Node2D" unique_id=1720763189]
script = ExtResource("1_k0juu")
enemy_scene = ExtResource("2_71j4m")
can_spawn = true

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1092523243]
tile_map_data = PackedByteArray("AAAAAAQAAAACAAAAAAAAAAUAAAADAAAAAAABAAAAAAACAAAAAAABAAIAAAACAAAAAAABAAQAAAADAAAAAAACAAMAAAADAAAAAAACAAQAAAACAAAAAAADAAEAAAACAAAAAAADAAIAAAACAAAAAAADAAMAAAACAAAAAAADAAQAAAADAAAAAAADAAUAAAACAAAAAAAFAAIAAAADAAAAAAAFAAMAAAADAAAAAAAFAAQAAAADAAAAAAAGAAMAAAACAAAAAAAGAAQAAAADAAAAAAAHAAIAAAACAAAAAAAIAAAAAAACAAAAAAAIAAQAAAACAAAAAAAIAAUAAAACAAAAAAAJAAAAAAADAAAAAAAJAAEAAAADAAAAAAAJAAQAAAACAAAAAAAJAAUAAAACAAAAAAAKAAMAAAADAAAAAAALAAUAAAADAAAAAAD+/wUAAAACAAAAAAD+/wYAAAADAAAAAAD+/wcAAAACAAAAAAD///7/AAADAAAAAAD//wUAAAACAAAAAAAAAP7/AAADAAAAAAAAAAMAAAADAAAAAAABAAMAAAACAAAAAAABAAYAAAADAAAAAAABAAcAAAADAAAAAAABAAgAAAADAAAAAAACAAAAAAADAAAAAAACAAIAAAADAAAAAAACAAgAAAACAAAAAAADAP7/AAACAAAAAAAEAP7/AAABAAAAAAAEAAYAAAACAAAAAAAEAAgAAAADAAAAAAAFAP//AAACAAAAAAAFAAEAAAADAAAAAAAFAAUAAAADAAAAAAAGAAEAAAADAAAAAAAGAAUAAAACAAAAAAAGAAgAAAACAAAAAAAHAP7/AAADAAAAAAAHAP//AAADAAAAAAAHAAMAAAACAAAAAAAHAAUAAAACAAAAAAAHAAcAAAADAAAAAAAIAP7/AAACAAAAAAAIAP//AAADAAAAAAAIAAIAAAADAAAAAAAIAAYAAAACAAAAAAAJAP//AAADAAAAAAAJAAIAAAADAAAAAAAJAAMAAAADAAAAAAAJAAcAAAADAAAAAAAKAP7/AAACAAAAAAAKAP//AAADAAAAAAAKAAAAAAADAAAAAAAKAAIAAAACAAAAAAAKAAUAAAACAAAAAAAKAAcAAAACAAAAAAAKAAgAAAADAAAAAAALAP//AAACAAAAAAALAAEAAAADAAAAAAALAAIAAAADAAAAAAALAAQAAAACAAAAAAALAAgAAAADAAAAAAAMAP7/AAADAAAAAAAMAP//AAACAAAAAAAMAAEAAAABAAAAAAAMAAIAAAADAAAAAAAMAAUAAAADAAAAAAAMAAcAAAACAAAAAAAMAAgAAAACAAAAAAANAAEAAAACAAAAAAANAAQAAAACAAAAAAANAAYAAAACAAAAAAAOAP7/AAADAAAAAAAOAAYAAAADAAAAAAAOAAcAAAACAAAAAAAPAAYAAAACAAAAAAAPAAgAAAACAAAAAAAQAP7/AAADAAAAAAAQAP//AAACAAAAAAAQAAEAAAACAAAAAAAQAAgAAAACAAAAAAARAP7/AAADAAAAAAARAAIAAAADAAAAAAARAAgAAAADAAAAAAASAAUAAAAAAAAAAAASAAcAAAACAAAAAAASAAgAAAADAAAAAAANAP//AAACAAAAAAANAAAAAAADAAAAAAAOAAIAAAACAAAAAAAOAAMAAAADAAAAAAAPAAQAAAADAAAAAAARAAcAAAADAAAAAAAOAAgAAAADAAAAAAANAAgAAAADAAAAAAAJAAgAAAADAAAAAAAIAAcAAAACAAAAAAAEAAAAAAACAAAAAAAFAAAAAAAAAAAAAAAEAAEAAAACAAAAAAAEAAIAAAACAAAAAAAEAAMAAAACAAAAAAAEAAQAAAACAAAAAAAEAAUAAAACAAAAAAAFAAYAAAABAAAAAAAEAAcAAAACAAAAAAAFAAcAAAABAAAAAAAGAAcAAAACAAAAAAAGAAYAAAACAAAAAAAHAAYAAAADAAAAAAAJAAYAAAADAAAAAAAKAAYAAAACAAAAAAALAAYAAAADAAAAAAAMAAYAAAACAAAAAAAPAAcAAAADAAAAAAAQAAcAAAACAAAAAAATAAcAAAADAAAAAAAUAAcAAAACAAAAAAAVAAcAAAADAAAAAAAWAAcAAAACAAAAAAAXAAcAAAADAAAAAAANAAcAAAADAAAAAAALAAcAAAADAAAAAAACAAYAAAACAAAAAAADAAYAAAADAAAAAAAAAAYAAAACAAAAAAAAAAcAAAACAAAAAAADAAgAAAADAAAAAAACAAkAAAACAAAAAAADAAkAAAADAAAAAAAEAAkAAAACAAAAAAAFAAkAAAADAAAAAAAGAAkAAAACAAAAAAAHAAkAAAADAAAAAAAIAAoAAAACAAAAAAAJAAoAAAADAAAAAAAKAAoAAAACAAAAAAALAAoAAAADAAAAAAAMAAoAAAACAAAAAAANAAoAAAADAAAAAAAOAAoAAAACAAAAAAAPAAoAAAADAAAAAAAQAAoAAAACAAAAAAARAAoAAAADAAAAAAASAAoAAAACAAAAAAATAAoAAAADAAAAAAAUAAoAAAACAAAAAAAVAAoAAAADAAAAAAAWAAkAAAACAAAAAAAXAAkAAAADAAAAAAAWAAgAAAADAAAAAAAXAAgAAAADAAAAAAAYAAgAAAACAAAAAAAZAAgAAAADAAAAAAAYAAcAAAACAAAAAAAZAAcAAAADAAAAAAAUAAYAAAACAAAAAAAVAAYAAAADAAAAAAASAAYAAAACAAAAAAATAAYAAAADAAAAAAAWAAAAAAADAAAAAAARAAAAAAACAAAAAAAOAAQAAAADAAAAAAAWAAIAAAADAAAAAAAUAAIAAAACAAAAAAASAAIAAAADAAAAAAATAAIAAAACAAAAAAAXAAIAAAADAAAAAAAYAAMAAAACAAAAAAAZAAMAAAADAAAAAAAYAAQAAAACAAAAAAAXAAUAAAADAAAAAAAWAAYAAAADAAAAAAAVAAIAAAADAAAAAAASAAQAAAADAAAAAAAUAAgAAAADAAAAAAAWAAUAAAADAAAAAAAWAAQAAAADAAAAAAAVAAMAAAADAAAAAAARAAMAAAACAAAAAAATAAMAAAACAAAAAAAaAAAAAAACAAAAAAAZAP//AAACAAAAAAAWAP//AAACAAAAAAAVAP//AAACAAAAAAATAP7/AAADAAAAAAANAP3/AAADAAAAAAAOAP3/AAADAAAAAAAQAP3/AAADAAAAAAARAP3/AAACAAAAAAAUAP7/AAACAAAAAAAWAP7/AAACAAAAAAAWAAMAAAACAAAAAAAXAAMAAAADAAAAAAAXAAQAAAADAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAABAAAAAAAQAAQAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAABAAAAAAAPAP//AAAAAAAAAAAPAAEAAAAAAAAAAAAVAAUAAAAAAAAAAAAUAAUAAAAAAAAAAAATAAUAAAABAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAADAAAAAAATAP//AAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAABAAAAAAAUAAEAAAABAAAAAAAVAAEAAAAAAAAAAAAJAPz/AAAAAAAAAAAIAPz/AAAAAAAAAAAHAPz/AAAAAAAAAAAGAPz/AAAAAAAAAAAFAP3/AAADAAAAAAD+//3/AAACAAAAAAD9//7/AAABAAAAAAD8//7/AAAAAAAAAAD8////AAABAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAABAAAAAAD9/wMAAAAAAAAAAAD8/wQAAAABAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD2/wIAAAADAAAAAAD2/wgAAAACAAAAAAD2/wkAAAADAAAAAAD8/wwAAAABAAAAAAD9/wwAAAABAAAAAAD+/wwAAAABAAAAAAD//wwAAAABAAAAAAAAAAwAAAAAAAAAAAACAA0AAAABAAAAAAADAA0AAAABAAAAAAAEAA0AAAADAAAAAAAFAA0AAAABAAAAAAAGAAwAAAAAAAAAAAAHAAwAAAAAAAAAAAD//woAAAABAAAAAAACAAcAAAACAAAAAAADAAcAAAAAAAAAAAD//wYAAAACAAAAAAD//wcAAAAAAAAAAAD//wgAAAACAAAAAAD//wkAAAACAAAAAAAAAAkAAAACAAAAAAAAAAgAAAACAAAAAAABAAoAAAACAAAAAAABAAsAAAACAAAAAAAAAAoAAAACAAAAAAAAAAsAAAACAAAAAAD//wsAAAACAAAAAAD+/wsAAAACAAAAAAD9/wsAAAACAAAAAAD8/wsAAAACAAAAAAD7/wsAAAACAAAAAAD+/wgAAAACAAAAAAD+/wkAAAACAAAAAAD+/woAAAACAAAAAAD9/wQAAAACAAAAAAD9/wUAAAACAAAAAAD9/wYAAAACAAAAAAD9/wcAAAAAAAAAAAD9/wgAAAACAAAAAAD9/wkAAAACAAAAAAD9/woAAAACAAAAAAD8/wcAAAACAAAAAAD8/wkAAAACAAAAAAD8/woAAAACAAAAAAD8/wgAAAACAAAAAAD8/wMAAAACAAAAAAD8/wEAAAACAAAAAAD8/wAAAAACAAAAAAD8/wIAAAACAAAAAAD7//7/AAACAAAAAAD7////AAACAAAAAAD7/wAAAAACAAAAAAD7/wEAAAACAAAAAAD7/wIAAAACAAAAAAD7/wMAAAACAAAAAAD7/wQAAAACAAAAAAD7/wUAAAACAAAAAAD7/wYAAAACAAAAAAD7/wcAAAACAAAAAAD7/wgAAAACAAAAAAD7/wkAAAACAAAAAAD7/woAAAACAAAAAAD6//7/AAACAAAAAAD6////AAACAAAAAAD6/wAAAAAAAAAAAAD6/wEAAAACAAAAAAD6/wIAAAACAAAAAAD6/wMAAAACAAAAAAD6/wQAAAACAAAAAAD6/wUAAAACAAAAAAD6/wYAAAACAAAAAAD6/wcAAAACAAAAAAD6/wgAAAACAAAAAAD6/wkAAAACAAAAAAD6/woAAAACAAAAAAD+/wMAAAACAAAAAAD+/wIAAAACAAAAAAD+/wEAAAACAAAAAAD+/wAAAAACAAAAAAD+////AAACAAAAAAD9////AAACAAAAAAD+//7/AAACAAAAAAD9/wAAAAACAAAAAAD//wAAAAACAAAAAAAAAAEAAAACAAAAAAD//wEAAAADAAAAAAD//wIAAAADAAAAAAD//wMAAAADAAAAAAD//wQAAAADAAAAAAD+/wQAAAADAAAAAAACAAEAAAADAAAAAAABAAEAAAADAAAAAAADAP//AAADAAAAAAADAAAAAAADAAAAAAACAP//AAADAAAAAAAEAP//AAADAAAAAAACAP7/AAADAAAAAAABAP//AAADAAAAAAAAAP//AAADAAAAAAAAAAAAAAADAAAAAAD/////AAADAAAAAAAFAP7/AAADAAAAAAAGAP7/AAADAAAAAAAGAP//AAADAAAAAAAGAAAAAAADAAAAAAAHAAAAAAADAAAAAAAGAAIAAAADAAAAAAAGAP3/AAADAAAAAAAHAP3/AAADAAAAAAAIAP3/AAADAAAAAAAJAP3/AAADAAAAAAAKAP3/AAADAAAAAAALAP3/AAADAAAAAAAMAP3/AAADAAAAAAAJAP7/AAADAAAAAAALAP7/AAADAAAAAAANAP7/AAADAAAAAAAMAAAAAAADAAAAAAALAAAAAAADAAAAAAAKAAEAAAADAAAAAAAMAAMAAAACAAAAAAANAAMAAAACAAAAAAANAAIAAAADAAAAAAALAAMAAAACAAAAAAAMAAQAAAADAAAAAAANAAUAAAACAAAAAAAOAAUAAAADAAAAAAAPAAUAAAADAAAAAAAQAAUAAAADAAAAAAARAAUAAAADAAAAAAARAAQAAAADAAAAAAARAAYAAAADAAAAAAAVAAQAAAADAAAAAAATAAQAAAADAAAAAAASAAMAAAADAAAAAAASAAEAAAADAAAAAAARAAEAAAADAAAAAAAOAAEAAAADAAAAAAAOAAAAAAADAAAAAAAOAP//AAADAAAAAAAPAAAAAAADAAAAAAAQAAAAAAADAAAAAAASAAAAAAADAAAAAAASAP//AAADAAAAAAASAP7/AAADAAAAAAASAP3/AAADAAAAAAAPAP7/AAADAAAAAAAPAP3/AAADAAAAAAAKAPz/AAADAAAAAAALAPz/AAADAAAAAAAMAPz/AAADAAAAAAANAPz/AAADAAAAAAAOAPz/AAADAAAAAAAPAPz/AAADAAAAAAAQAPz/AAADAAAAAAARAPz/AAADAAAAAAASAPz/AAADAAAAAAATAPz/AAADAAAAAAAUAPz/AAADAAAAAAARAP//AAADAAAAAAAUAAAAAAADAAAAAAAUAP//AAADAAAAAAAVAAAAAAADAAAAAAATAP3/AAADAAAAAAAUAP3/AAADAAAAAAAVAP3/AAADAAAAAAAWAP3/AAADAAAAAAAVAP7/AAADAAAAAAAVAPz/AAADAAAAAAAWAPz/AAADAAAAAAAXAPz/AAADAAAAAAAYAPz/AAADAAAAAAAXAP3/AAADAAAAAAAXAP7/AAADAAAAAAAYAP//AAADAAAAAAAYAAAAAAADAAAAAAAYAAEAAAADAAAAAAAXAAEAAAABAAAAAAAWAAEAAAADAAAAAAAXAAAAAAADAAAAAAAZAAAAAAACAAAAAAAZAAEAAAACAAAAAAAZAAIAAAADAAAAAAAYAAIAAAACAAAAAAAXAP//AAADAAAAAAAYAP3/AAACAAAAAAAYAP7/AAACAAAAAAAZAPv/AAACAAAAAAAZAPz/AAACAAAAAAAZAP3/AAADAAAAAAAZAP7/AAADAAAAAAAaAPv/AAADAAAAAAAaAPz/AAADAAAAAAAaAP3/AAACAAAAAAAaAP7/AAACAAAAAAAaAP//AAACAAAAAAAaAAEAAAADAAAAAAAaAAIAAAACAAAAAAAaAAMAAAACAAAAAAAaAAQAAAACAAAAAAAaAAUAAAACAAAAAAAaAAYAAAADAAAAAAAaAAcAAAADAAAAAAAaAAgAAAADAAAAAAAaAAkAAAADAAAAAAAaAAoAAAADAAAAAAAaAAsAAAACAAAAAAAaAAwAAAACAAAAAAAaAA0AAAACAAAAAAAZAA0AAAADAAAAAAAYAA0AAAADAAAAAAAXAA0AAAACAAAAAAAWAA0AAAADAAAAAAAVAA0AAAADAAAAAAAUAA0AAAACAAAAAAATAA0AAAACAAAAAAASAA0AAAADAAAAAAARAA0AAAADAAAAAAAQAA0AAAADAAAAAAAPAA0AAAACAAAAAAAOAA0AAAACAAAAAAANAA0AAAADAAAAAAAMAA0AAAADAAAAAAALAA0AAAACAAAAAAAKAA0AAAADAAAAAAAJAA4AAAACAAAAAAAIAA4AAAACAAAAAAAHAA4AAAACAAAAAAAGAA4AAAADAAAAAAAFAA4AAAADAAAAAAAEAA4AAAADAAAAAAADAA4AAAADAAAAAAACAA4AAAACAAAAAAABAA4AAAADAAAAAAAAAA4AAAADAAAAAAD//w4AAAACAAAAAAD+/w4AAAADAAAAAAD+/w0AAAACAAAAAAD9/w0AAAACAAAAAAD8/w0AAAACAAAAAAD7/w0AAAACAAAAAAD6/w0AAAADAAAAAAD5/w0AAAADAAAAAAD5/w4AAAADAAAAAAD6/w4AAAACAAAAAAD8/w4AAAADAAAAAAD9/w4AAAADAAAAAAAKAA8AAAADAAAAAAALAA8AAAACAAAAAAAMAA8AAAADAAAAAAANAA8AAAACAAAAAAAOAA8AAAACAAAAAAAPAA8AAAACAAAAAAAQAA8AAAACAAAAAAASAA8AAAACAAAAAAATAA8AAAACAAAAAAAUAA8AAAACAAAAAAAVAA8AAAACAAAAAAAVAA4AAAACAAAAAAAWAA4AAAADAAAAAAAXAA4AAAADAAAAAAAYAA4AAAACAAAAAAAZAA4AAAACAAAAAAAaAA4AAAADAAAAAAAaAA8AAAADAAAAAAAZAA8AAAACAAAAAAAYAA8AAAADAAAAAAAXAA8AAAADAAAAAAAWAA8AAAADAAAAAAARAA8AAAADAAAAAAAJAA8AAAACAAAAAAAHAA8AAAADAAAAAAAGAA8AAAACAAAAAAAFAA8AAAADAAAAAAAEAA8AAAADAAAAAAADAA8AAAADAAAAAAACAA8AAAACAAAAAAABAA8AAAADAAAAAAAAAA8AAAACAAAAAAD//w8AAAACAAAAAAD+/w8AAAADAAAAAAD9/w8AAAACAAAAAAD6/w8AAAADAAAAAAD5/w8AAAACAAAAAAD7/w8AAAADAAAAAAAIAA8AAAACAAAAAAD8/w8AAAACAAAAAAD2//v/AAADAAAAAAD2//z/AAACAAAAAAD2//3/AAADAAAAAAD2//7/AAACAAAAAAD2/wAAAAACAAAAAAD2/wEAAAACAAAAAAD2/wMAAAADAAAAAAD2/wQAAAADAAAAAAD2/wUAAAACAAAAAAD2/wYAAAADAAAAAAD2/wcAAAACAAAAAAD2/woAAAADAAAAAAD2/wsAAAACAAAAAAD2/w0AAAADAAAAAAD2/w8AAAACAAAAAAD3/w8AAAACAAAAAAD4/w8AAAACAAAAAAD2/w4AAAACAAAAAAD2/wwAAAADAAAAAAD2////AAACAAAAAAD3//v/AAADAAAAAAD3//z/AAADAAAAAAD3//3/AAADAAAAAAD3//7/AAADAAAAAAD3////AAADAAAAAAD3/wAAAAADAAAAAAD3/wEAAAACAAAAAAD3/wIAAAACAAAAAAD3/wMAAAACAAAAAAD3/wUAAAACAAAAAAD3/wYAAAACAAAAAAD3/wcAAAACAAAAAAD3/wgAAAACAAAAAAD3/wkAAAADAAAAAAD3/woAAAADAAAAAAD3/wsAAAACAAAAAAD3/wwAAAADAAAAAAD3/w0AAAACAAAAAAD3/w4AAAADAAAAAAD4//v/AAACAAAAAAD4//z/AAADAAAAAAD4//3/AAACAAAAAAD4//7/AAACAAAAAAD4////AAADAAAAAAD4/wAAAAACAAAAAAD4/wEAAAACAAAAAAD4/wIAAAACAAAAAAD4/wMAAAADAAAAAAD4/wQAAAACAAAAAAD4/wUAAAADAAAAAAD4/wYAAAACAAAAAAD4/wcAAAADAAAAAAD4/wgAAAACAAAAAAD4/wkAAAACAAAAAAD4/woAAAACAAAAAAD4/wsAAAADAAAAAAD4/wwAAAACAAAAAAD4/w0AAAADAAAAAAD4/w4AAAACAAAAAAD5//v/AAADAAAAAAD5//z/AAACAAAAAAD5//3/AAACAAAAAAD5//7/AAACAAAAAAD5////AAADAAAAAAD5/wAAAAACAAAAAAD5/wEAAAACAAAAAAD5/wIAAAACAAAAAAD5/wMAAAACAAAAAAD5/wQAAAADAAAAAAD5/wUAAAACAAAAAAD5/wYAAAACAAAAAAD5/wcAAAADAAAAAAD5/wgAAAACAAAAAAD5/wkAAAACAAAAAAD5/woAAAACAAAAAAD5/wsAAAADAAAAAAD5/wwAAAACAAAAAAD6/wsAAAADAAAAAAD6/wwAAAADAAAAAAD7/wwAAAACAAAAAAD6//v/AAADAAAAAAD8//v/AAACAAAAAAD9//v/AAACAAAAAAD+//v/AAACAAAAAAD///v/AAACAAAAAAAAAPv/AAACAAAAAAABAPv/AAACAAAAAAACAPv/AAACAAAAAAADAPv/AAACAAAAAAAEAPv/AAADAAAAAAAFAPv/AAADAAAAAAAGAPv/AAACAAAAAAAHAPv/AAADAAAAAAAIAPv/AAADAAAAAAAJAPv/AAACAAAAAAAKAPv/AAADAAAAAAALAPv/AAACAAAAAAAMAPv/AAACAAAAAAANAPv/AAACAAAAAAAOAPv/AAACAAAAAAAQAPv/AAACAAAAAAARAPv/AAACAAAAAAASAPv/AAACAAAAAAATAPv/AAADAAAAAAAUAPv/AAADAAAAAAAVAPv/AAACAAAAAAAWAPv/AAADAAAAAAAXAPv/AAACAAAAAAAYAPv/AAADAAAAAAAFAPz/AAACAAAAAAAEAPz/AAADAAAAAAADAPz/AAADAAAAAAACAPz/AAACAAAAAAABAPz/AAACAAAAAAAAAPz/AAADAAAAAAD+//z/AAACAAAAAAD9//z/AAACAAAAAAD8//z/AAACAAAAAAD7//z/AAACAAAAAAD6//z/AAADAAAAAAD7//v/AAACAAAAAAD6//3/AAADAAAAAAD7//3/AAADAAAAAAD8//3/AAADAAAAAAD9//3/AAADAAAAAAD///3/AAADAAAAAAAAAP3/AAACAAAAAAABAP3/AAADAAAAAAACAP3/AAADAAAAAAADAP3/AAACAAAAAAAEAP3/AAADAAAAAAD///z/AAACAAAAAAABAP7/AAADAAAAAAAQAAYAAAAAAAAAAAAXAAYAAAAAAAAAAAAYAAYAAAAAAAAAAAAZAAYAAAAAAAAAAAAYAAUAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAUAAAAAAAAAAAARAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAAOAAkAAAACAAAAAAANAAkAAAACAAAAAAAMAAkAAAACAAAAAAALAAkAAAADAAAAAAAKAAkAAAADAAAAAAAJAAkAAAADAAAAAAAFAAsAAAAAAAAAAAAGAAoAAAAAAAAAAAAKAAsAAAABAAAAAAALAAsAAAABAAAAAAANAAsAAAABAAAAAAARAAwAAAABAAAAAAAUAAsAAAABAAAAAAANAAwAAAABAAAAAAAJAAwAAAABAAAAAAAIAA0AAAADAAAAAAD//w0AAAADAAAAAAAAAA0AAAADAAAAAAABAA0AAAACAAAAAAABAAkAAAACAAAAAAACAAoAAAAAAAAAAAACAAsAAAADAAAAAAACAAwAAAACAAAAAAABAAwAAAADAAAAAAADAAoAAAACAAAAAAADAAsAAAACAAAAAAADAAwAAAACAAAAAAAEAAoAAAADAAAAAAAEAAsAAAACAAAAAAAEAAwAAAACAAAAAAAFAAoAAAACAAAAAAAFAAwAAAACAAAAAAAGAAsAAAACAAAAAAAHAAsAAAACAAAAAAAIAAsAAAADAAAAAAAHAAoAAAACAAAAAAAJAAsAAAADAAAAAAAFAAgAAAACAAAAAAAHAAgAAAACAAAAAAAIAAgAAAACAAAAAAAIAAkAAAAAAAAAAAAIAAwAAAADAAAAAAAGAA0AAAADAAAAAAAHAA0AAAACAAAAAAAJAA0AAAACAAAAAAAKAAwAAAACAAAAAAALAAwAAAADAAAAAAAMAAwAAAADAAAAAAAMAAsAAAACAAAAAAAOAAwAAAACAAAAAAAPAAwAAAADAAAAAAAQAAwAAAACAAAAAAAOAAsAAAADAAAAAAAPAAsAAAACAAAAAAAQAAsAAAADAAAAAAARAAsAAAADAAAAAAASAAsAAAACAAAAAAATAAsAAAACAAAAAAASAAkAAAADAAAAAAATAAkAAAADAAAAAAAUAAkAAAADAAAAAAAVAAkAAAADAAAAAAAVAAgAAAACAAAAAAATAAgAAAACAAAAAAAQAAkAAAADAAAAAAASAAwAAAADAAAAAAATAAwAAAADAAAAAAAUAAwAAAACAAAAAAAVAAwAAAABAAAAAAAWAAwAAAACAAAAAAAXAAwAAAADAAAAAAAYAAwAAAACAAAAAAAZAAwAAAACAAAAAAAZAAkAAAADAAAAAAAZAAoAAAACAAAAAAAZAAsAAAADAAAAAAAYAAkAAAADAAAAAAAYAAoAAAACAAAAAAAYAAsAAAACAAAAAAAXAAoAAAACAAAAAAAXAAsAAAACAAAAAAAWAAoAAAACAAAAAAAWAAsAAAACAAAAAAAVAAsAAAADAAAAAAAUAA4AAAADAAAAAAATAA4AAAADAAAAAAASAA4AAAADAAAAAAARAA4AAAACAAAAAAAQAA4AAAACAAAAAAAPAA4AAAACAAAAAAAOAA4AAAACAAAAAAANAA4AAAACAAAAAAAMAA4AAAADAAAAAAALAA4AAAACAAAAAAAKAA4AAAACAAAAAAD7/w4AAAADAAAAAAABAAUAAAADAAAAAAACAAUAAAACAAAAAAD3/wQAAAADAAAAAAAPAPv/AAACAAAAAAAKAAQAAAACAAAAAAAAAAIAAAACAAAAAAAHAAEAAAACAAAAAAAIAAMAAAACAAAAAAAIAAEAAAABAAAAAAAHAAQAAAABAAAAAAA=")
tile_set = SubResource("TileSet_qfnet")

[node name="house" type="StaticBody2D" parent="." unique_id=2110723374]
position = Vector2(1064, 415)

[node name="viking_house" type="Sprite2D" parent="house" unique_id=888142013]
scale = Vector2(1.5726818, 1.5726817)
texture = ExtResource("5_71j4m")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="house" unique_id=44619946]
position = Vector2(10, 10)
polygon = PackedVector2Array(48, -301, -51, -302, -228, -45, -170, 77, -235, 112, -16, 76, 209, 106, 163, 74, 222, -51)
one_way_collision_margin = 113.0

[node name="Area2D" type="Area2D" parent="house" unique_id=740649153]

[node name="CollisionShape2D" type="CollisionShape2D" parent="house/Area2D" unique_id=690662798]
position = Vector2(2, 217)
shape = SubResource("RectangleShape2D_71j4m")
debug_color = Color(0.9660235, 0, 0.48605263, 0.41960785)

[node name="player" parent="." unique_id=1228700527 groups=["Player"] instance=ExtResource("3_4wyf3")]
position = Vector2(404, 377)
scale = Vector2(1.1, 1.1)
power = 2.5

[node name="wave_cooldown" type="Timer" parent="." unique_id=1691603953]
wait_time = 10.0
one_shot = true

[node name="spawn_timer" type="Timer" parent="." unique_id=1517517701]
autostart = true

[node name="spawn_path" type="Path2D" parent="." unique_id=853264121]
position = Vector2(49.106186, -87.06158)
scale = Vector2(0.99312454, 0.9876847)
curve = SubResource("Curve2D_71j4m")

[node name="spawn_location" type="PathFollow2D" parent="spawn_path" unique_id=1505007522]
position = Vector2(3456.6602, -560.84534)
rotation = -3.1401124

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1200716236]

[node name="Control" type="Control" parent="CanvasLayer" unique_id=1604220629]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="charge_bar" type="ProgressBar" parent="CanvasLayer/Control" unique_id=2048410438]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 21.0
offset_top = -174.0
offset_right = 64.0
offset_bottom = 136.5
grow_vertical = 2
value = 50.0
fill_mode = 3

[node name="wave_info" type="Label" parent="CanvasLayer/Control" unique_id=1942776125]
layout_mode = 1
offset_right = 143.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("7_i7141")
theme_override_font_sizes/font_size = 50
text = "Wave: 1"

[node name="enemy_info" type="Label" parent="CanvasLayer/Control" unique_id=747728177]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -242.0
offset_right = -13.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("7_i7141")
theme_override_font_sizes/font_size = 40
text = "Enemies left: 10"

[node name="wave_alert" type="Label" parent="CanvasLayer/Control" unique_id=385027454]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_i7141")
theme_override_font_sizes/font_size = 30
text = "Starting next wave in 3"

[connection signal="timeout" from="wave_cooldown" to="." method="_on_wave_cooldown_timeout"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
